--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>JavaScript file upload</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <script src="https://wzrd.in/standalone/buffer"></script>
-    <script src="https://unpkg.com/ipfs-api@9.0.0/dist/index.js"
+    <script src="https://unpkg.com/ipfs-api@https://github.com/TheCBKM/IPFS-Uploader/blob/master/ipfs.html9.0.0/dist/index.js"
     integrity="sha384-5bXRcW9kyxxnSMbOoHzraqa7Z0PQWIao+cgeg327zit1hz5LZCEbIMx/LWKPReuB"
     crossorigin="anonymous"></script>
   </head>
