--- a/index.html
+++ b/index.html
@@ -3,6 +3,40 @@
 
 <head>
   <title>JavaScript file upload</title>
+  <style>
+    .lds-hourglass {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-hourglass:after {
+  content: " ";
+  display: block;
+  border-radius: 50%;
+  width: 0;
+  height: 0;
+  margin: 8px;
+  box-sizing: border-box;
+  border: 32px solid rgb(255, 0, 0);
+  border-color: rgb(255, 0, 0) transparent rgb(255, 0, 0) transparent;
+  animation: lds-hourglass 1.2s infinite;
+}
+@keyframes lds-hourglass {
+  0% {
+    transform: rotate(0);
+    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  }
+  50% {
+    transform: rotate(900deg);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  100% {
+    transform: rotate(1800deg);
+  }
+}
+
+  </style>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <script src="https://wzrd.in/standalone/buffer"></script>
   <script src="https://unpkg.com/ipfs-api@9.0.0/dist/index.js"
@@ -11,6 +45,8 @@
 </head>
 <script type="text/javascript">
   function upload() {
+            document.getElementById("url").innerHTML = '<div class="lds-hourglass"></div>'
+
     const reader = new FileReader();
     reader.onloadend = function () {
       const ipfs = window.IpfsApi({
